Add arrows to drops on scoreboard